--- a/src/app.css
+++ b/src/app.css
@@ -1,2 +1,7 @@
 @import 'tailwindcss';
 @plugin '@tailwindcss/typography';
+@import '@fontsource-variable/inconsolata';
+
+@theme {
+  --font-sans: 'Inconsolata Variable', sans-serif;
+}
