--- a/src/app.css
+++ b/src/app.css
@@ -1,7 +1,12 @@
 @import 'tailwindcss';
 @plugin '@tailwindcss/typography';
-/* @import '@fontsource-variable/inconsolata'; */
-@import '@fontsource/ibm-plex-mono';
+@import '@fontsource/ibm-plex-mono/100.css';
+@import '@fontsource/ibm-plex-mono/200.css';
+@import '@fontsource/ibm-plex-mono/300.css';
+@import '@fontsource/ibm-plex-mono/400.css';
+@import '@fontsource/ibm-plex-mono/500.css';
+@import '@fontsource/ibm-plex-mono/600.css';
+@import '@fontsource/ibm-plex-mono/700.css';
 
 @theme {
   --font-sans: 'IBM Plex Mono', sans-serif;
